# MDReader

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
scripts/: fetch-chromium.ps1
src/: git_update.rs  main.rs
wix/: main.wxs
