[package]
name = "mdreader"
version = "0.2.2"
edition = "2021"
authors = ["ophiocus <csantanad@gmail.com>"]
description = "Read-only Windows markdown viewer built with Rust and egui"
license = "MIT"

[package.metadata.deb]
maintainer = "ophiocus <csantanad@gmail.com>"
copyright = "2024 ophiocus"
extended-description = "Scans a configurable root directory for .md files, renders them with syntax highlighting, and exports to PDF."
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/mdreader", "usr/bin/mdreader", "755"],
    ["README.md", "usr/share/doc/mdreader/README.md", "644"],
]

[package.metadata.bundle]
name = "MD Reader"
identifier = "com.ophiocus.mdreader"
icon = ["assets/icon.png"]
short_description = "Read-only markdown viewer"
copyright = "Copyright © 2024 ophiocus"

[dependencies]
eframe = "0.28"
egui_commonmark = { version = "0.17", features = ["better_syntax_highlighting"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rfd = "0.14"
comrak = { version = "0.28", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true
