[package]
name = "mdreader"
version = "0.3.1"
edition = "2021"
authors = ["ophiocus <csantanad@gmail.com>"]
description = "Read-only Windows markdown viewer built with Rust and egui"
license = "MIT"

[package.metadata.deb]
maintainer = "ophiocus <csantanad@gmail.com>"
copyright = "2024 ophiocus"
extended-description = "Scans a configurable root directory for .md files, renders them with syntax highlighting, and exports to PDF."
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/mdreader", "usr/bin/mdreader", "755"],
    ["README.md", "usr/share/doc/mdreader/README.md", "644"],
]

[package.metadata.wix]
# Pass -dChromiumSource to candle.exe so the heat-harvested wix/chromium.wxs
# fragment (which uses var.ChromiumSource for File Source= paths) resolves
# correctly.  The `chromium-bundle` directory is populated by
# scripts/fetch-chromium.ps1 as a pre-build step.
compiler-args = ["-dChromiumSource=chromium-bundle"]

[package.metadata.bundle]
name = "MD Reader"
identifier = "com.ophiocus.mdreader"
icon = ["assets/icon.png"]
short_description = "Read-only markdown viewer"
copyright = "Copyright © 2024 ophiocus"

[dependencies]
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow"] }
egui_commonmark = { version = "0.17", features = ["better_syntax_highlighting"] }
egui_extras = { version = "0.28", features = ["all_loaders"] }
# image is a transitive dep of egui_extras' image loader; pin it here with
# default features so PNG/JPEG/WebP/GIF decoders are actually compiled in.
image = { version = "0.24", features = ["png", "jpeg", "webp", "gif", "bmp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rfd = "0.14"
comrak = { version = "0.28", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true
